k8s/papaya-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: platform-dashboard
  name: platform-dashboard
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: platform-dashboard
